[gd_scene load_steps=45 format=2]

[ext_resource path="res://Zones/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Actors/Ants/AntTeste.gd" type="Script" id=2]
[ext_resource path="res://Assets/Animations/AntSpriteSheetTESTE.png" type="Texture" id=3]
[ext_resource path="res://Actors/WanderController.tscn" type="PackedScene" id=4]
[ext_resource path="res://Zones/DetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://Actors/Stats.tscn" type="PackedScene" id=6]
[ext_resource path="res://Zones/HurtBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Zones/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://Actors/Ants/ClickArea.gd" type="Script" id=15]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.82265
height = 4.50026

[sub_resource type="Animation" id=2]
resource_name = "Attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Ant Spritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_start"
}, {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("DetectionZone/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "gain_exp"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Ant Spritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Search"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("Ant Spritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "search_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DetectionZone:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7, 1, 1.4, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 45.0, 45.0, -45.0, -45.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("DetectionZone:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 1.7, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Ant Spritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 11, 12, 13, 14, 15, 16, 17, 18, 19, 20 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Walk Leaf"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Ant Spritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 21, 22, 23, 24, 25, 26, 27, 28 ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Search"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Walk Leaf"

[sub_resource type="AnimationNodeTimeScale" id=11]

[sub_resource type="AnimationNodeBlendTree" id=12]
graph_offset = Vector2( 0, 146.25 )
nodes/Animation/node = SubResource( 10 )
nodes/Animation/position = Vector2( 80, 200 )
nodes/TimeScale/node = SubResource( 11 )
nodes/TimeScale/position = Vector2( 260, 200 )
nodes/output/position = Vector2( 420, 220 )
node_connections = [ "output", 0, "TimeScale", "TimeScale", 0, "Animation" ]

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Walk"

[sub_resource type="AnimationNodeTimeScale" id=14]

[sub_resource type="AnimationNodeBlendTree" id=15]
graph_offset = Vector2( -6.10352e-05, 0 )
nodes/Animation/node = SubResource( 13 )
nodes/Animation/position = Vector2( 80, 80 )
nodes/TimeScale/node = SubResource( 14 )
nodes/TimeScale/position = Vector2( 300, 60 )
nodes/output/position = Vector2( 520, 80 )
node_connections = [ "output", 0, "TimeScale", "TimeScale", 0, "Animation" ]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachine" id=28]
states/Attack/node = SubResource( 7 )
states/Attack/position = Vector2( 310, 73 )
states/Idle/node = SubResource( 8 )
states/Idle/position = Vector2( 428, 148 )
states/Search/node = SubResource( 9 )
states/Search/position = Vector2( 428, 273 )
states/Walk/node = SubResource( 15 )
states/Walk/position = Vector2( 539, 73 )
"states/Walk Leaf/node" = SubResource( 12 )
"states/Walk Leaf/position" = Vector2( 248.667, 153.429 )
transitions = [ "Idle", "Attack", SubResource( 16 ), "Attack", "Idle", SubResource( 17 ), "Walk", "Idle", SubResource( 18 ), "Idle", "Walk", SubResource( 19 ), "Idle", "Search", SubResource( 20 ), "Search", "Idle", SubResource( 21 ), "Search", "Walk", SubResource( 22 ), "Walk", "Attack", SubResource( 23 ), "Attack", "Walk", SubResource( 24 ), "Walk", "Search", SubResource( 25 ), "Walk Leaf", "Idle", SubResource( 26 ), "Idle", "Walk Leaf", SubResource( 27 ) ]
start_node = "Idle"
graph_offset = Vector2( -272.333, 40.4292 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=29]

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 8.12613, 5.47466 )

[sub_resource type="ConvexPolygonShape2D" id=31]
points = PoolVector2Array( -7, 0, 150, -45, 150, 45 )

[sub_resource type="CapsuleShape2D" id=32]
radius = 1.73193
height = 1.32373

[sub_resource type="RectangleShape2D" id=33]
extents = Vector2( 2.84912, 4.599 )

[sub_resource type="CapsuleShape2D" id=34]
radius = 3.07416
height = 6.0697

[sub_resource type="CapsuleShape2D" id=35]
radius = 1.87604
height = 6.15942

[node name="AntTeste" type="KinematicBody2D" groups=[
"Ant",
]]
light_mask = -2147483647
position = Vector2( 1055.88, 792.953 )
collision_layer = 3
collision_mask = 512
script = ExtResource( 2 )
proximity_range = 4

[node name="Ant Spritesheet" type="Sprite" parent="."]
position = Vector2( -0.220459, 1.45681 )
texture = ExtResource( 3 )
offset = Vector2( 0, -0.5 )
hframes = 54
frame = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Search = SubResource( 4 )
anims/Walk = SubResource( 5 )
"anims/Walk Leaf" = SubResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 28 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 29 )
parameters/Walk/TimeScale/scale = 2.5
"parameters/Walk Leaf/TimeScale/scale" = 2.5

[node name="WanderController" parent="." instance=ExtResource( 4 )]
wander_range = 100

[node name="Stats" parent="." instance=ExtResource( 6 )]
MAX_HP = 3
CUR_HP = 3
ACCELERATION = 80
MAX_SPEED = 50
MAX_LEVEL = 100.0
HUNGER = 100
THIRST = 50

[node name="ClickArea" type="Area2D" parent="."]
script = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
shape = SubResource( 30 )

[node name="DetectionZone" parent="." instance=ExtResource( 5 )]
collision_mask = 12

[node name="CollisionShape2D" parent="DetectionZone" index="0"]
shape = SubResource( 31 )

[node name="DetectionZone2" parent="." instance=ExtResource( 5 )]
position = Vector2( -2.35395, 0.117985 )
scale = Vector2( 1.14933, 1.11266 )
collision_mask = 12

[node name="CollisionShape2D" parent="DetectionZone2" index="0"]
position = Vector2( 8.13751, -0.11792 )
shape = SubResource( 32 )

[node name="Hitbox" parent="." instance=ExtResource( 1 )]
collision_layer = 0
collision_mask = 96

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 7.6731, 0.157654 )
shape = SubResource( 33 )
disabled = true

[node name="HurtBox" parent="." instance=ExtResource( 7 )]
position = Vector2( -1, 0 )
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( -0.840942, 0 )
rotation = 1.5708
shape = SubResource( 34 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]
position = Vector2( -0.888638, 0.111362 )

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( -1.28162, -0.0883789 )
rotation = 1.5708
shape = SubResource( 35 )

[node name="AI" type="Node2D" parent="."]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="mouse_entered" from="ClickArea" to="ClickArea" method="_on_ClickArea_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="ClickArea" method="_on_ClickArea_mouse_exited"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="WanderController"]

[editable path="DetectionZone"]

[editable path="DetectionZone2"]

[editable path="Hitbox"]

[editable path="HurtBox"]

[editable path="SoftCollision"]
